# logfire-pycon-2024

./: 01_manual_tracing.py  02_auto_tracing_get_deps.py  02_auto_tracing_get_deps_run.py  03_pretty_python.py  04_stripe_server.py  04_stripe_server_auto.py  05_pydantic_plugin.py  06_openai.py  LICENSE  README.md  pyproject.toml
07_cat_bacon/: __init__.py  db.py  images.py  main.py  page.py
